// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`message parser command parsing should parse commands with arguments 1`] = `
{
  "command": "run",
  "arguments": [
    "npm",
    "install",
    "react",
  ],
}
`;

exports[`message parser command parsing should parse commands with no arguments 1`] = `
{
  "command": "ls",
  "arguments": [],
}
`;

exports[`message parser command parsing should parse commands with string argument 1`] = `
{
  "command": "cd",
  "arguments": [
    "/some/path/here",
  ],
}
`;

exports[`message parser command parsing should parse multiple commands with arguments 1`] = `
[
  {
    "command": "run",
    "arguments": [
      "npm",
      "install",
      "react",
    ],
  },
  {
    "command": "ls",
    "arguments": [],
  },
  {
    "command": "cd",
    "arguments": [
      "/some/path/here",
    ],
  },
]
`;

exports[`message parser command parsing should parse multiple commands with no arguments 1`] = `
[
  {
    "command": "ls",
    "arguments": [],
  },
  {
    "command": "pwd",
    "arguments": [],
  },
]
`;

exports[`message parser command parsing should parse simple command 1`] = `
{
  "command": "ls",
  "arguments": [],
}
`;

exports[`message parser command parsing should parse simple command with args 1`] = `
{
  "command": "npm",
  "arguments": [
    "install",
    "react",
  ],
}
`;

exports[`message parser command parsing should return null if no command 1`] = `null`;

exports[`message parser command parsing should trim input 1`] = `
{
  "command": "ls",
  "arguments": [],
}
`;
